<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_app_update"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sjs.dz.rzxt2.my.AboutActivity"
    android:orientation="vertical"
    android:background="@color/windowBackground">
    <android.support.v7.widget.Toolbar
        android:id="@+id/about_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/textColorWhite"
            android:text="@string/my_about_text"/>
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:id="@+id/sLayout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="none"
        >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="18dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:text="@string/about_main_text"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:padding="14dp"
        android:background="@color/white">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="14dp"
        android:text="@string/about_com_name_info"
        />
        </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="2dp"
    android:padding="14dp"
    android:background="@color/white"

    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textSize="14dp"
        android:text="@string/about_com_addr"
        />
    <TextView
        android:alpha="0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:layout_weight="1.0" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_com_addr_info"
        android:textSize="12dp"
        android:textColor="@color/colorPrimary"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:padding="14dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="14dp"
            android:text="@string/about_com_tel"
            />
        <TextView
            android:alpha="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:layout_weight="1.0" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimary"
            android:textSize="14dp"
            android:text="@string/about_com_tel_info"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:padding="14dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="14dp"
            android:text="@string/about_com_phone"
            />
        <TextView
            android:alpha="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:layout_weight="1.0" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/about_com_phone_info"
            android:textSize="14dp"
            android:textColor="@color/colorPrimary"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:padding="14dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/about_item_web_url"
            android:textSize="14dp"
            />
        <TextView
            android:alpha="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/about_item_web_url_info"
            android:textColor="@color/colorPrimary"
            android:textSize="14dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:padding="14dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/about_wechar"
            android:textSize="14dp"
            />
        <TextView
            android:alpha="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/about_wechar_info"
            android:textColor="@color/colorPrimary"
            android:textSize="14dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:padding="14dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/about_email"
            android:textSize="14dp"
            />
        <TextView
            android:alpha="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/about_email_info"
            android:gravity="right"
            android:textColor="@color/colorPrimary"
            android:textSize="14dp"
            />
    </LinearLayout>
</LinearLayout>
    </ScrollView>
</LinearLayout>
