<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_edit_ip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sjs.dz.rzxt2.EditIPActivity"
    android:background="@color/windowBackground"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/edit_ip_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/textColorWhite"
            android:text="@string/my_setting_text"/>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/toolbar_height"
        android:layout_marginRight="@dimen/toolbar_height"
        android:orientation="vertical"
        android:paddingTop="48dp"
        >

       <TextView
           android:layout_height="wrap_content"
           android:layout_width="match_parent"
           android:text="@string/connect_name"/>
        <EditText
            android:id="@+id/et_connect_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="recome"
            android:background="@color/white"
            android:textSize="@dimen/textSize_small"
            android:padding="8dp"
            android:textColor="@color/textColorBlack"

            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/server_IP"/>
        <EditText
            android:id="@+id/et_connect_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="@dimen/textSize_small"
            android:padding="8dp"
            android:hint="192.108.2.1"
            android:background="@color/white"
            android:textColor="@color/textColorBlack"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/port"/>
        <EditText
            android:id="@+id/et_connect_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="@dimen/textSize_small"
            android:padding="8dp"
            android:hint="5760"
            android:background="@color/white"
            android:textColor="@color/textColorBlack"
            />

        <Button
            android:id="@+id/btn_ok_edit_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:text="@string/ok"
            android:background="@color/colorPrimary"
            android:textColor="@color/textColorWhite" />
        </LinearLayout>

</LinearLayout>
