<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground">
    <android.support.v7.widget.Toolbar
        android:id="@+id/tab3_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/textColorWhite"
            android:text="@string/tab3"/>
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin"
        android:background="@color/white"
        android:padding="@dimen/view_padding"
        >
        <ImageButton
            android:id="@+id/im_user_icon"
            android:layout_width="@dimen/user_icon"
            android:layout_height="@dimen/user_icon"
            android:background="@color/white"
            android:src="@mipmap/defaulticon"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:gravity="center">
            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_test"
                android:textSize="@dimen/textSize_middle"
                android:textColor="@color/textColorBlack"/>
            <TextView
                android:id="@+id/tv_user_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_test"
                android:textSize="@dimen/textSize_middle"
                android:textColor="@color/textColorBlack"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_line"
        android:layout_marginTop="12dp"

        >
        <!--<LinearLayout-->
        <!--android:id="@+id/ly_memo"-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:paddingLeft="@dimen/view_padding"-->
        <!--android:paddingRight="@dimen/view_padding"-->
        <!--android:paddingBottom="@dimen/view_padding"-->
        <!--android:paddingTop="@dimen/view_padding"-->
        <!--android:background="@color/white"-->
        <!--&gt;-->
        <!--<ImageView-->
        <!--android:layout_width="@dimen/icon_my_menu"-->
        <!--android:layout_height="@dimen/icon_my_menu"-->
        <!--android:src="@mipmap/ic_memo"-->
        <!--android:layout_weight="0.05"/>-->
        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:gravity="left|center"-->
        <!--android:layout_marginLeft="@dimen/view_padding"-->
        <!--android:textSize="@dimen/textSize_middle"-->
        <!--android:text="@string/my_memo_text"-->
        <!--android:textColor="@color/textColorBlack"-->
        <!--android:layout_weight="0.9"/>-->
        <!--&lt;!&ndash;<ImageView&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_width="15dp"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_height="15dp"&ndash;&gt;-->
        <!--&lt;!&ndash;android:src="@mipmap/ic_right"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_weight="0.05"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_gravity="right"&ndash;&gt;-->
        <!--&lt;!&ndash;/>&ndash;&gt;-->
        <!--</LinearLayout>-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_line"
        android:paddingBottom="@dimen/bg_line"
        >
        <LinearLayout
            android:id="@+id/ly_clear"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingLeft="@dimen/view_padding"
            android:paddingRight="@dimen/view_padding"
            android:paddingBottom="@dimen/view_padding"
            android:paddingTop="@dimen/view_padding"
            android:background="@color/white"
            >
            <ImageView
                android:layout_width="@dimen/icon_my_menu"
                android:layout_height="@dimen/icon_my_menu"
                android:src="@mipmap/ic_clear"
                android:layout_weight="0.05"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:layout_marginLeft="@dimen/view_padding"
                android:textSize="@dimen/textSize_middle"
                android:text="@string/my_clear_text"
                android:textColor="@color/textColorBlack"
                android:layout_weight="0.9"/>
            <!--<ImageView-->
            <!--android:layout_width="15dp"-->
            <!--android:layout_height="15dp"-->
            <!--android:src="@mipmap/ic_right"-->
            <!--android:layout_weight="0.05"-->
            <!--android:layout_gravity="right"-->
            <!--/>-->
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_line"
        android:paddingBottom="@dimen/bg_line"
        >
        <LinearLayout
            android:id="@+id/ly_setting"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/view_padding"
            android:paddingRight="@dimen/view_padding"
            android:paddingBottom="@dimen/view_padding"
            android:paddingTop="@dimen/view_padding"
            android:background="@color/white"
            >
            <ImageView
                android:layout_width="@dimen/icon_my_menu"
                android:layout_height="@dimen/icon_my_menu"
                android:src="@mipmap/ic_setting"
                android:layout_weight="0.05"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:layout_marginLeft="@dimen/view_padding"
                android:textSize="@dimen/textSize_middle"
                android:text="@string/my_setting_text"
                android:textColor="@color/textColorBlack"
                android:layout_weight="0.9"/>
            <!--<ImageView-->
            <!--android:layout_width="15dp"-->
            <!--android:layout_height="15dp"-->
            <!--android:src="@mipmap/ic_right"-->
            <!--android:layout_weight="0.05"-->
            <!--android:layout_gravity="right"-->
            <!--/>-->
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_line"
        android:layout_marginTop="10dp"
        android:paddingTop="@dimen/bg_line"
        android:paddingBottom="@dimen/bg_line"
        >
        <LinearLayout
            android:id="@+id/ly_update"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/view_padding"
            android:paddingRight="@dimen/view_padding"
            android:paddingBottom="@dimen/view_padding"
            android:paddingTop="@dimen/view_padding"
            android:background="@color/white"
            >
            <ImageView
                android:layout_width="@dimen/icon_my_menu"
                android:layout_height="@dimen/icon_my_menu"
                android:src="@mipmap/ic_appupdate"
                android:layout_weight="0.05"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:layout_marginLeft="@dimen/view_padding"
                android:textSize="@dimen/textSize_middle"
                android:text="@string/my_update_text"
                android:textColor="@color/textColorBlack"
                android:layout_weight="0.9"/>
            <!--<ImageView-->
            <!--android:layout_width="15dp"-->
            <!--android:layout_height="15dp"-->
            <!--android:src="@mipmap/ic_right"-->
            <!--android:layout_weight="0.05"-->
            <!--android:layout_gravity="right"-->
            <!--/>-->
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_line"

        android:paddingBottom="@dimen/bg_line"
        >
        <LinearLayout
            android:id="@+id/ly_about"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/view_padding"
            android:paddingRight="@dimen/view_padding"
            android:paddingBottom="@dimen/view_padding"
            android:paddingTop="@dimen/view_padding"
            android:background="@color/white"
            >
            <ImageView
                android:layout_width="@dimen/icon_my_menu"
                android:layout_height="@dimen/icon_my_menu"
                android:src="@mipmap/ic_about"
                android:layout_weight="0.05"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:layout_marginLeft="@dimen/view_padding"
                android:textSize="@dimen/textSize_middle"
                android:text="@string/my_about_text"
                android:textColor="@color/textColorBlack"
                android:layout_weight="0.9"/>
            <!--<ImageView-->
            <!--android:layout_width="15dp"-->
            <!--android:layout_height="15dp"-->
            <!--android:src="@mipmap/ic_right"-->
            <!--android:layout_weight="0.05"-->
            <!--android:layout_gravity="right"-->
            <!--/>-->
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_line"
        android:layout_marginTop="10dp"
        android:paddingTop="@dimen/bg_line"
        android:paddingBottom="@dimen/bg_line"
        >
        <LinearLayout
            android:id="@+id/ly_out"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/view_padding"
            android:paddingRight="@dimen/view_padding"
            android:paddingBottom="@dimen/view_padding"
            android:paddingTop="@dimen/view_padding"
            android:background="@color/white"
            >
            <ImageView
                android:layout_width="@dimen/icon_my_menu"
                android:layout_height="@dimen/icon_my_menu"
                android:src="@mipmap/ic_out"
                android:layout_weight="0.05"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:layout_marginLeft="@dimen/view_padding"
                android:textSize="@dimen/textSize_middle"
                android:text="@string/my_out_text"
                android:textColor="@color/textColorBlack"
                android:layout_weight="0.9"/>
            <!--<ImageView-->
            <!--android:layout_width="15dp"-->
            <!--android:layout_height="15dp"-->
            <!--android:src="@mipmap/ic_right"-->
            <!--android:layout_weight="0.05"-->
            <!--android:layout_gravity="right"-->
            <!--/>-->
        </LinearLayout>
    </LinearLayout>
</LinearLayout>